<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  
    <string name="app_name">Library Management</string>
    <string name="hello_world">Hello world!</string>
  
    <string name="title_activity_main">Library Management</string>
  <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_back">Back</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_done">Done</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_google_shopper">Shopper</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product Search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_google_books">Google Books</string>
  <string name="msg_google_product">Google Product Search</string>
  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_title">1D barcodes</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_front_light_auto">Automatic</string>
  <string name="preferences_front_light_off">Off</string>
  <string name="preferences_front_light_on">On</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_invert_scan_title">Invert scan</string>
  <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>  
  <string name="preferences_name">Settings</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
  <string name="preferences_search_country">Search country</string>
  <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
  <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="wifi_changing_network">Requesting connection to network\u2026</string>
  <string name="wifi_ssid_label">Network Name</string>
  <string name="wifi_type_label">Type</string>
  <string name="scan_book">Scan Book</string>
  <string name="your_id">Your Id</string>
  <string name="please_scan_a_book_for_the_id">PLEASE SCAN THE BOOK TO RENEW IT</string>
  <string name="renew_book">Renew Book</string>
  <string name="scanid">Scan ID</string>
  <string name="action_search">Search</string>
  <string name="action_refresh">Refresh</string>
  <string name="action_help">Help</string>
  <string name="regno">Registration No</string>
  <string name="password">Password</string>
  <string name="login">Login</string> 
    <string name="Login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="SCANID">SCAN ID</string>
    <string name="OR">OR</string>
    <string name="Regno">Registration No.</string>
    <string name="pass">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_evarsity_credientials">ENTER EVARSITY CREDIENTIALS</string>
    <string name="appCredientials">APP CREDIENTIALS</string>
    <string name="evarsity_password">Evarsity Password</string>
    <string name="mobile_no_">Mobile No.</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="logoutbt">LOGOUT</string>
    <string name="scan_and_renew_book">SCAN AND RENEW BOOK</string>
    <string name="book_name">BOOK NAME</string>
    <string name="issue_date_">"ISSUE DATE:"</string>
    <string name="author_">"AUTHOR:"</string>
    <string name="return_date_">"RETURN DATE:"</string>
    <string name="issue_date">issue date</string>
    <string name="author">author</string>
    <string name="renewal_date">renewal date</string>
    <string name="book_has_incurred_fine">BOOK HAS INCURRED FINE</string>
    <string name="logging_in_">Loading...</string>
    <string name="please_wait_">Please Wait...</string>
    <string name="your_book_list">Your Book List</string>
    <string name="please_renew_issued_">"PLEASE RENEW ISSUED "</string>
    <string name="books_within_next">BOOKS WITHIN NEXT</string>
    <string name="two_days">TWO DAYS</string>
</resources>
