<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >
    
    <!--Progress Bar -->
    <RelativeLayout
    android:id="@+id/LoadingProgress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/loader" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/load"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/please_wait_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
    
  <!-- Actual registraion layout -->
<RelativeLayout 
    android:id="@+id/RLcurlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/Regno"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignRight="@+id/editText6"
        android:layout_below="@+id/editText3"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/mobile_no_"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:ems="10"
        android:hint="@string/e_mail_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_below="@+id/editText6"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/enter_evarsity_credientials"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/appCredientials"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:hint="@string/evarsity_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        style="@style/ButtonText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:text="@string/Register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

</RelativeLayout>

</RelativeLayout>