<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/renewal_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/return_date_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/author_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ButtonText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/book_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView8"
        style="@style/ButtonText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/book_has_incurred_fine"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginLeft="14dp"
        android:text="@string/issue_date_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/issue_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

</RelativeLayout>