<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
<RelativeLayout
    android:id="@+id/LoadingProgress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/loader" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/load"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/please_wait_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

<RelativeLayout
    android:id="@+id/RLRenewBookAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        style="@style/ButtonText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/book_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/renewal_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/return_date_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:background="@drawable/purple_btn"
        android:text="@string/scan_and_renew_book" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginLeft="14dp"
        android:text="@string/issue_date_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/author_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/issue_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Chocolate" />

</RelativeLayout>
</RelativeLayout>